--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+}
+
+.background__color_style_dark {
+  background-color: #1f1f1f;
+  z-index: -3;
+}
+
+.background__color_style_light {
+  background-color: #f2f2f2;
+  z-index: -3;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,17 +23,57 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
+.text__color_style_blue {
+  color: #2f80ed;
+}
+
+.text__color_style_default {
+  color: #000000;
+}
+
+.text__color_style_white {
+  color: #ffffff;
+}
+
+
+.header__logo {
+  height: 32px;
+  width: 183px;
+}
+
+.header__logo_place_header{
+  position: absolute;
+  background-image: url(../images/logo_place_header.svg);
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  width: 730px;
+  font-weight: 600;
+  font-size: 102px;
+  line-height: 96px;
+  margin-left: 64px;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  font-weight: 600px;
+  font-size: 18px;
+  line-height: 25px;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background: #2f80ed;
+  top: 64px;
+  position: absolute;
+  right: 0;
+  z-index: -2;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -29,3 +83,338 @@
   margin-right: 0;
   margin-top: 80px;
 }
+
+.header__main-illustration {
+  background-image: url(../images/header-image.png);
+  background-size: cover;
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  z-index: -1;
+}
+
+.description {
+  width: 80%;
+  margin: auto; 
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.two-columns__brief {
+  width: 175px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.2;
+  margin-top: 100px;
+  position: relative;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  top: 0;
+  right: 0;
+  margin-top: 100px;
+  position: relative;
+}
+
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+}
+
+.two-columns__paragraph_position_central-block {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.digits {
+  top: 0;
+  height: 100%;
+  margin: auto;
+  position: relative;
+  width: auto;
+}
+
+.section-title {
+  width: 60%;
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 69px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 0;
+}
+
+
+.section-subtitle {
+  margin-top: 20px;
+  width: 60%;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 100px;
+}
+
+.table__cell {
+  width: 250px;
+  height: auto;
+}
+
+.table__heading {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.15;
+  margin-top: 60px;
+}
+
+.table__text {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.2;
+  margin-top: 20px;
+}
+
+.feinman {
+  height: 790px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 1;
+}
+
+.feinman__title {
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: 600;
+  margin-top: 100px;
+  margin-bottom: 0;
+  width: 648px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feinman__subtitle {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  margin-top: 70px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feinman__link {
+  font-size: 18px;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 51px;
+  position: absolute;
+  top: 50%;
+  text-align: right;
+  right: 48px;
+}
+
+.feinman__image {
+  bottom: 0px;
+  left: 0px;
+  height: 637px;
+  width: 867px;
+  position: absolute;
+  background-image: url(../images/feynman.png);
+  z-index: -2;
+}
+
+.kaufman {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.section-title__theme_dark {
+  color: #ffffff;
+  width: 60%;
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 69px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 90px;
+  margin-bottom: 0;
+}
+
+.section-subtitle__theme_dark {
+  color: #ffffff;
+  width: 60%;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.table__theme_dark {
+  color: #ffffff;
+  margin-bottom: 90px;
+}
+
+.table__cell_theme_dark {
+  color: #ffffff;
+  width: 200px;
+  margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  color: #ffffff;
+}
+
+.table__text_theme_dark {
+  color: #ffffff;
+}
+
+.kaufman__triangle {
+  top: 0;
+  right: -210px;
+  height: 877px;
+  width: 877px;
+  position: absolute;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
+  z-index: -2;
+}
+
+
+.footer__columns {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+}
+
+.logo__place_footer {
+  background-image: url(../images/logo_place_footer.svg);
+}
+
+.footer__author {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.footer__column_content_info {
+  text-align: left;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  text-align: left;
+}
+
+.header {
+height: 100vh;
+min-height: 600px;
+max-height: 756px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+position: relative;
+z-index: 1;
+}
+
+.header__link {
+
+}
+
+.main {
+  z-index: 1;
+}
+
+.footer {
+  min-height: 350px;
+  height: 100%;
+  display: flex;
+  position: relative;
+  z-index: 1;
+}
+
+.footer__column_content_social {
+  color: #ffffff;
+}
+
+.footer__column-links {
+  color: #ffffff;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: left;
+}
+
+.footer__column-heading {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: left;
+}
+
+.footer__social-links {
+  color: #ffffff;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.link__text_underline_disable {
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
