--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+p {
+    margin: 0;
+}
+
 body {
   margin: 0;
 }
@@ -36,12 +40,12 @@ body {
 }
 
 
-.header__logo {
+.logo {
   height: 32px;
   width: 183px;
 }
 
-.header__logo_place_header{
+.logo__place_header{
   position: absolute;
   background-image: url(../images/logo_place_header.svg);
   top: 30px;
@@ -63,6 +67,8 @@ body {
   font-weight: 600px;
   font-size: 18px;
   line-height: 25px;
+  width: 388px;
+  margin-bottom: 0;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -120,11 +126,17 @@ body {
   right: 0;
   margin-top: 100px;
   position: relative;
+  border: 5px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 315px;
 }
 
 .two-columns__paragraph {
   font-size: 24px;
   line-height: 34px;
+  
 }
 
 .two-columns__span-accent {
