--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -2,7 +2,7 @@
   width: 60%;
   font-weight: 600;
   font-size: 60px;
-  line-height: 69px;
+  line-height: 1.15;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
