--- a/blocks/khan/__author/khan__author.css
+++ b/blocks/khan/__author/khan__author.css
@@ -3,5 +3,9 @@
   font-size: 30px;
   line-height: 42px;
   text-align: left;
-  margin-top: 50px;
+  margin-top: 0;
+  font-style: normal;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
