--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -3,5 +3,9 @@
   font-size: 24px;
   line-height: 1.15;
   margin-top: 43px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
   text-align: center;
+  font-style: normal;
 }
