--- a/blocks/feinman/__title/feinman__title.css
+++ b/blocks/feinman/__title/feinman__title.css
@@ -2,11 +2,12 @@
   font-size: 120px;
   line-height: 1.15;
   font-weight: 600;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 0;
   width: 648px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   z-index: 2;
+  font-style: normal;
 }
