--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -2,7 +2,11 @@
   width: 730px;
   font-weight: 600;
   font-size: 102px;
+  font-style: normal;
   line-height: 96px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
   margin-left: 64px;
   z-index: 3;
 }
