--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,8 +1,17 @@
 .khan__buy-link {
   font-weight: normal;
-  font-size: 24px;
-  line-height: 1.15;
+  font-size: 30px;
+  line-height: 42px;
   text-align: left;
   position: absolute;
   margin-left: 48px;
+  color: #2f80ed;
+  text-decoration: none;
+  opacity: 1;
+  transition: opacity 0.115s linear;
+  margin-top: 68px;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.75;
 }
