--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -1,7 +1,8 @@
-.khan__quote-auhor-subline {
+.khan__quote-author-subline {
   font-weight: normal;
   font-size: 24px;
   line-height: 1.15;
   text-align: left;
   margin-top: 10px;
+  margin-bottom: 0;
 }
