--- a/blocks/table/__heading/table__heading.css
+++ b/blocks/table/__heading/table__heading.css
@@ -1,5 +1,7 @@
 .table__heading {
-  font-weight: 600;
+  font-weight: bold;
   font-size: 24px;
   line-height: 1.15;
+  font-style: normal;
+  margin: 0;
 }
