--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,9 +1,12 @@
 .two-columns__paragraph {
   font-size: 24px;
   line-height: 34px;
-  margin-top: 30px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.two-columns__paragraph:first-child {
-  margin-top: 0;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
