--- a/blocks/table/__cell/_theme/table__cell_theme_dark.css
+++ b/blocks/table/__cell/_theme/table__cell_theme_dark.css
@@ -1,9 +1,8 @@
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
   color: #ffffff;
-  width: 200px;
-  margin-top: 80px;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
