--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,4 +1,8 @@
 .khan__book-container {
-  height: 608px;
   overflow: hidden;
+  margin-top: 68px;
+  width: auto;
+  height: 608px;
+  display: flex;
+  width: max-content;
 }
